# crab-chip

./: .gitignore  Cargo.toml  README.md  settings.yaml
src/: chip8.rs  main.rs  utils.rs
src/chip8/: draw.rs  fmt_debug.rs  format_display.rs  mod.rs  operations.rs
src/core/: draw.rs  error.rs  fmt_debug.rs  fontset.rs  mod.rs
src/interface/: controls.rs  mod.rs  sound.rs
