[package]
name = "crab-chip"
version = "0.1.0"
authors = ["Daryl Pinto <daryl.j.pinto@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
minifb = "0.19.1"
rodio = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.15"
spin_sleep = "1.0.0"
